crates/org-edit/tests/snapshots/snapshots__toggle_in_code.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
a ~co⁁de‸~ b

----
error: Code and verbatim text cannot be formatted
