crates/org-edit/tests/snapshots/snapshots__toggle_nested.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
a *bold ⁁word‸* b

----
a *bold /word/‸* b
