crates/org-edit/tests/snapshots/snapshots__toggle_tag_on.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* Heading‸ :a:
Text.

----
* Heading‸                                                               :a:b:
Text.
